--- a/index.html
+++ b/index.html
@@ -33,12 +33,6 @@
             width: 100%;
             text-align: center;
             position: relative;
-            animation: fadeIn 1s ease-out;
-        }
-
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
         }
 
         .sidebar {
@@ -112,13 +106,10 @@
             border-radius: 8px;
             cursor: pointer;
             transition: background-color 0.3s;
-            transform: scale(1);
-            transition: transform 0.2s ease-in-out;
         }
 
         .controls button:hover {
             background-color: #444;
-            transform: scale(1.1);
         }
 
         #progress-bar {
@@ -129,19 +120,6 @@
             cursor: pointer;
         }
 
-        #progress-bar::-webkit-slider-thumb {
-            width: 15px;
-            height: 15px;
-            background-color: #fff;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #progress-bar::-webkit-slider-thumb:hover {
-            background-color: #ddd;
-        }
-
         #lyrics-container {
             margin-top: 20px;
             padding: 0 20px;
@@ -150,13 +128,6 @@
             text-align: left;
             max-height: 200px;
             overflow-y: auto;
-            opacity: 0;
-            animation: fadeInLyrics 1s ease-out forwards;
-        }
-
-        @keyframes fadeInLyrics {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
         }
 
         footer {
@@ -174,26 +145,6 @@
             border-radius: 12px;
             margin-bottom: 15px;
             object-fit: cover;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-            transition: transform 0.3s, rotate 1s linear infinite;
-        }
-
-        #album-cover.playing {
-            transform: rotate(360deg);
-        }
-
-        .search-bar input {
-            padding: 10px;
-            background-color: #333;
-            border: none;
-            color: white;
-            border-radius: 4px;
-            width: 200px;
-            margin-bottom: 15px;
-        }
-
-        .search-bar input::placeholder {
-            color: #bbb;
         }
     </style>
 </head>
@@ -201,10 +152,6 @@
 
     <div class="music-player">
         <header>musiccccc</header>
-
-        <div class="search-bar">
-            <input type="text" id="search" placeholder="搜索歌曲或歌手" />
-        </div>
 
         <div id="album-cover-container">
             <img id="album-cover" src="default-cover.jpg" alt="專輯封面" />
@@ -250,13 +197,30 @@
         let songList = document.getElementById('song-list');
 
         let currentTrackIndex = 0;
+        let musicData = [];
 
         // 加載音樂資料 JSON
         fetch('musicData.json')
             .then(response => response.json())
             .then(data => {
-                let musicData = data.songs;
+                musicData = data.songs;
 
+                // 顯示歌曲列表
+                function updateSongList() {
+                    songList.innerHTML = '';
+                    musicData.forEach((song, index) => {
+                        let li = document.createElement('li');
+                        li.textContent = song.title;
+                        li.onclick = () => {
+                            currentTrackIndex = index;
+                            loadTrack(index);
+                            audio.play();
+                        };
+                        songList.appendChild(li);
+                    });
+                }
+
+                // 加載歌曲
                 function loadTrack(index) {
                     if (index < 0 || index >= musicData.length) {
                         console.error('無效的歌曲索引');
@@ -266,11 +230,10 @@
                     let song = musicData[index];
                     audio.src = song.file;
                     songTitle.textContent = song.title;
-                    artistName.textContent = song.artist;
+                    artistName.textContent = "歌手名稱"; // 可以在 JSON 中添加歌手名稱
                     albumCover.src = song.coverImage;
-                    loadLyrics(song.lyrics);
+                    loadLyrics(song.lyricsFile);
                     progressBar.value = 0;
-
                     playPauseButton.innerHTML = '<i class="fas fa-play"></i> 播放';
                     isPlaying = false;
 
@@ -279,16 +242,22 @@
                     };
                 }
 
-                function loadLyrics(lyrics) {
-                    lyricsContainer.innerHTML = '';
-                    let lines = lyrics.split('\n');
-                    lines.forEach(line => {
-                        let p = document.createElement('p');
-                        p.textContent = line;
-                        lyricsContainer.appendChild(p);
-                    });
+                // 讀取歌詞
+                function loadLyrics(lyricsFile) {
+                    fetch(lyricsFile)
+                        .then(response => response.text())
+                        .then(lyrics => {
+                            lyricsContainer.innerHTML = '';
+                            let lines = lyrics.split('\n');
+                            lines.forEach(line => {
+                                let p = document.createElement('p');
+                                p.textContent = line;
+                                lyricsContainer.appendChild(p);
+                            });
+                        });
                 }
 
+                // 播放與暫停控制
                 function togglePlay() {
                     if (isPlaying) {
                         audio.pause();
@@ -300,46 +269,42 @@
                     isPlaying = !isPlaying;
                 }
 
+                // 下一首
                 function nextTrack() {
                     currentTrackIndex = (currentTrackIndex + 1) % musicData.length;
                     loadTrack(currentTrackIndex);
                     audio.play();
                 }
 
+                // 上一首
                 function prevTrack() {
                     currentTrackIndex = (currentTrackIndex - 1 + musicData.length) % musicData.length;
                     loadTrack(currentTrackIndex);
                     audio.play();
                 }
 
+                // 更新進度條
                 function updateProgress() {
                     let progress = (audio.currentTime / audio.duration) * 100;
                     progressBar.value = progress;
                     currentTimeDisplay.textContent = formatTime(audio.currentTime);
                 }
 
+                // 格式化時間
                 function formatTime(seconds) {
                     let mins = Math.floor(seconds / 60);
                     let secs = Math.floor(seconds % 60);
                     return `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
                 }
 
+                // 初始載入第一首歌曲
                 loadTrack(currentTrackIndex);
 
                 // 自動更新進度條
                 audio.ontimeupdate = updateProgress;
 
-                // 讓側邊欄顯示歌曲列表
-                musicData.forEach((song, index) => {
-                    let li = document.createElement('li');
-                    li.textContent = song.title;
-                    li.onclick = () => {
-                        currentTrackIndex = index;
-                        loadTrack(index);
-                        audio.play();
-                    };
-                    songList.appendChild(li);
-                });
+                // 顯示歌曲列表
+                updateSongList();
             });
 
         // 側邊欄切換功能
