--- a/index.html
+++ b/index.html
@@ -7,88 +7,23 @@
     <script src="https://cdn.jsdelivr.net/npm/marked@4.0.10/lib/marked.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        /* 基本樣式設置 */
         body {
             font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: white;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
+            background-color: #f4f4f4;
+            color: #333;
         }
 
         .music-player {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: rgba(0, 0, 0, 0.7);
-            border-radius: 12px;
+            max-width: 600px;
+            margin: 50px auto;
+            background-color: #fff;
             padding: 20px;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
-            max-width: 500px;
-            width: 100%;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            position: relative;
-            animation: fadeIn 1s ease-out;
-        }
-
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        .sidebar {
-            position: absolute;
-            top: 0;
-            right: -250px;
-            width: 250px;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            transition: right 0.3s;
-            box-shadow: -3px 0 10px rgba(0, 0, 0, 0.5);
-            z-index: 100;
-        }
-
-        .sidebar.open {
-            right: 0;
-        }
-
-        .sidebar ul {
-            list-style: none;
-            padding: 20px;
-            margin: 0;
-        }
-
-        .sidebar ul li {
-            padding: 15px;
-            border-bottom: 1px solid #333;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .sidebar ul li:hover {
-            background-color: #444;
-        }
-
-        .sidebar-button {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            border-radius: 50%;
-            cursor: pointer;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-            transition: background-color 0.3s;
-        }
-
-        .sidebar-button:hover {
-            background-color: #444;
         }
 
         header {
@@ -97,103 +32,116 @@
             margin-bottom: 20px;
         }
 
+        #album-cover-container {
+            margin-bottom: 20px;
+        }
+
+        #album-cover {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        #song-info {
+            margin-bottom: 20px;
+        }
+
+        #song-title {
+            font-size: 20px;
+            font-weight: bold;
+            margin: 5px 0;
+        }
+
+        #artist-name {
+            font-size: 16px;
+            color: #777;
+        }
+
         .controls {
             display: flex;
-            align-items: center;
-            gap: 20px;
-            margin: 20px 0;
+            justify-content: space-around;
+            margin-bottom: 20px;
         }
 
         .controls button {
-            padding: 12px 25px;
-            background-color: #333;
-            border: none;
-            color: white;
-            border-radius: 8px;
+            padding: 10px 20px;
+            font-size: 18px;
             cursor: pointer;
-            transition: background-color 0.3s;
-            transform: scale(1);
-            transition: transform 0.2s ease-in-out;
+            background-color: #3faffa;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
         }
 
         .controls button:hover {
-            background-color: #444;
-            transform: scale(1.1);
+            background-color: #338ad3;
         }
 
         #progress-bar {
-            width: 250px;
-            height: 5px;
-            background-color: #444;
-            border-radius: 5px;
-            cursor: pointer;
+            width: 100%;
+            margin-bottom: 10px;
         }
 
-        #progress-bar::-webkit-slider-thumb {
-            width: 15px;
-            height: 15px;
-            background-color: #fff;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #progress-bar::-webkit-slider-thumb:hover {
-            background-color: #ddd;
+        #current-time {
+            font-size: 14px;
+            color: #555;
         }
 
         #lyrics-container {
             margin-top: 20px;
-            padding: 0 20px;
-            font-size: 16px;
-            line-height: 1.6;
-            text-align: left;
-            max-height: 300px;
+            max-height: 200px;
             overflow-y: auto;
-            opacity: 0;
-            animation: fadeInLyrics 1s ease-out forwards;
-        }
-
-        @keyframes fadeInLyrics {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+            font-size: 14px;
+            color: #555;
         }
 
         footer {
             margin-top: 20px;
-            color: #ccc;
+            font-size: 14px;
+            color: #aaa;
         }
 
-        #song-info {
-            margin-top: 10px;
+        /* 側邊欄樣式 */
+        .sidebar-button {
+            font-size: 30px;
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            cursor: pointer;
+            z-index: 1000;
         }
 
-        #album-cover {
-            width: 180px;
-            height: 180px;
-            border-radius: 12px;
-            margin-bottom: 15px;
-            object-fit: cover;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-            transition: transform 0.3s, rotate 1s linear infinite;
-        }
-
-        #album-cover.playing {
-            transform: rotate(360deg);
-        }
-
-        .search-bar input {
-            padding: 10px;
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            height: 100%;
             background-color: #333;
-            border: none;
             color: white;
-            border-radius: 4px;
-            width: 200px;
-            margin-bottom: 15px;
+            padding: 20px;
+            transition: left 0.3s ease;
         }
 
-        .search-bar input::placeholder {
-            color: #bbb;
+        .sidebar.open {
+            left: 0;
+        }
+
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .sidebar ul li {
+            padding: 10px;
+            cursor: pointer;
+            border-bottom: 1px solid #444;
+        }
+
+        .sidebar ul li:hover {
+            background-color: #444;
         }
     </style>
 </head>
@@ -267,9 +215,9 @@
                     let song = musicData[index];
                     audio.src = song.file;
                     songTitle.textContent = song.title;
-                    artistName.textContent = song.artist;
-                    albumCover.src = song.cover;
-                    updateLyrics(song.lyrics);
+                    artistName.textContent = song.title.split(" ")[0]; // Example to split artist
+                    albumCover.src = song.coverImage;
+                    fetchLyrics(song.lyricsFile);
                     progressBar.value = 0;
                     currentTimeDisplay.textContent = '00:00';
                     isPlaying = false;
@@ -287,6 +235,16 @@
 
                 loadTrack(currentTrackIndex);
             });
+
+        // 顯示歌詞
+        function fetchLyrics(lyricsFile) {
+            fetch(lyricsFile)
+                .then(response => response.text())
+                .then(lyrics => {
+                    lyricsContainer.innerHTML = marked(lyrics);
+                })
+                .catch(err => console.error('Failed to load lyrics:', err));
+        }
 
         // 控制播放/暫停
         function togglePlay() {
@@ -331,11 +289,6 @@
         function updateProgress() {
             let progress = progressBar.value;
             audio.currentTime = (progress / 100) * audio.duration;
-        }
-
-        // 顯示歌詞
-        function updateLyrics(lyrics) {
-            lyricsContainer.innerHTML = marked(lyrics);
         }
 
         // 切換側邊欄
